# lazyopt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  design.md  pyproject.toml
.github/workflows/: ci.yml
devai_hyperopt/: __init__.py  context.py  optimizer.py  proxy.py  results.py  space.py
examples/: feature_engineering.py  hyperparams.yaml  lgbm_classifier.py  optimize.py
lazyopt/: __init__.py  context.py  optimizer.py  proxy.py  results.py  space.py
tests/: test_context.py  test_optimizer.py  test_proxy.py  test_results.py  test_space.py
