[project]
name = "lazyopt"
version = "0.1.0"
description = "Lightweight Bayesian hyperparameter optimization with ContextVar-based lazy proxies"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "hebo @ git+https://github.com/kegl/HEBO.git@sparse_grid_space#subdirectory=HEBO",
    "pymoo<0.6",
    "pyyaml>=6.0",
    "numpy>=1.21",
    "pandas>=1.3",
]
[project.optional-dependencies]
examples = [
    "lightgbm",
    "scikit-learn",
]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov",
    "ruff>=0.4",
]
